--- a/package.json
+++ b/package.json
@@ -10,8 +10,30 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.5.10",
     "@astrojs/check": "^0.5.10",
+    "@astrojs/react": "^3.1.0",
+    "@astrojs/tailwind": "^5.1.0",
+    "@fontsource/lato": "^5.0.20",
+    "@types/react": "^18.2.72",
+    "@types/react-dom": "^18.2.22",
+    "astro": "^4.5.10",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.4.3"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^7.4.0",
+    "@typescript-eslint/parser": "^7.4.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-astro": "^0.33.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-react": "^7.34.1",
+    "prettier": "^3.2.5",
+    "prettier-plugin-astro": "^0.13.0",
+    "prettier-plugin-organize-imports": "^3.2.4",
+    "prettier-plugin-tailwindcss": "^0.5.12",
+    "sass": "^1.72.0"
   }
 }
