--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@astrojs/check": "^0.5.10",
     "@astrojs/react": "^3.1.0",
     "@astrojs/tailwind": "^5.1.0",
-    "@fontsource/lato": "^5.0.20",
+    "@fontsource/open-sans": "^5.0.27",
+    "@iconify-json/mdi": "^1.1.64",
     "@types/react": "^18.2.72",
     "@types/react-dom": "^18.2.22",
     "astro": "^4.5.10",
+    "astro-icon": "^1.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.4.1",
